--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         }
 
         .card[data-year="2025"] .card-date {
-            background-color: #FFAAD9; /* Light Orange */
+            background-color: #FFB3B3; /* Light Coral */
             color: #000; /* Black text color */
         }
 
@@ -143,9 +143,9 @@
          {
             title: "Ornstein-Uhlenbeck Process Visualisation",
             wip: false,
-            description: "TODO",
+            description: "Allows you to adjust parameters and visualise solution paths. Has accompanying explanation to the mean-reverting behaviour",
             link: "https://ornstein-uhlenbeck.streamlit.app",
-            tags: ["TODO"],
+            tags: ["Maths", "Visualisation"],
             date: 2025
         },
         {
