--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         }
 
         .card[data-year="2025"] .card-date {
-            background-color: #FFB3B3; /* Light Coral */
+            background-color: #F4ECCD; /* Light yellow */
             color: #000; /* Black text color */
         }
 
