--- a/index.html
+++ b/index.html
@@ -141,11 +141,19 @@
 <script>
     [
          {
+            title: "Disease Spread on a Graph",
+            wip: false,
+            description: "Simulation of disease spread with real time SIR curves",
+            link: "https://nathanevaans.github.io/SIR-graph-spread/",
+            tags: ["Maths", "Visualisation"],
+            date: 2025
+        },
+        {
             title: "Ornstein-Uhlenbeck Process Visualisation",
             wip: false,
             description: "Allows you to adjust parameters and visualise solution paths. Has accompanying explanation to the mean-reverting behaviour",
             link: "https://ornstein-uhlenbeck.streamlit.app",
-            tags: ["Maths", "Visualisation"],
+            tags: ["Exposition", "Maths", "Visualisation"],
             date: 2025
         },
         {
