--- a/index.html
+++ b/index.html
@@ -116,7 +116,27 @@
         }
 
         .card[data-year="2025"] .card-date {
-            background-color: #F4ECCD; /* Light yellow */
+            background-color: #FFF0B3;
+            color: #000; /* Black text color */
+        }
+
+        .card[data-year="2026"] .card-date {
+            background-color: #FFB399;
+            color: #000; /* Black text color */
+        }
+
+        .card[data-year="2027"] .card-date {
+            background-color: #D9E3E6;
+            color: #000; /* Black text color */
+        }
+
+        .card[data-year="2028"] .card-date {
+            background-color: #FFB3C1;
+            color: #000; /* Black text color */
+        }
+
+        .card[data-year="2029"] .card-date {
+            background-color: #FFB3E6;
             color: #000; /* Black text color */
         }
 
