--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@
 
 <script>
     [
+        {
+            title: "Sample path visualiser",
+            wip: false,
+            description: "Accompanies my reserch on the Deep BSDE method, this lets you see how our new sample paths compare to Brownian motion",
+            link: "https://nathanevaans.github.io/path_visualiser/",
+            tags: ["Maths", "Visualisation"],
+            date: 2025
+        },
          {
             title: "Disease Spread on a Graph",
             wip: false,
