--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         {
             title: "Interpolation",
             wip: false,
-            description: "Visualise polynomial and composite interpolants for functions written in LaTeX. Features in the University of Bath's second year module in numerical analsyis",
+            description: "Visualise polynomial and composite interpolants for functions written in LaTeX. Features in the University of Bath's second year module in numerical analysis",
             link: "https://nathanevaans.github.io/numerical/",
             tags: ["Algorithms", "Maths", "Visualisation"],
             date: 2024
