--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             title: "Structured Noise to Reduce Deep BSDE Training Loss",
             wip: false,
             description: `Research project focusing on reducing training loss for the Deep BSDE method under supervision of <a href="https://people.bath.ac.uk/jmf68/" target="_blank">Dr James Foster</a>, jointly funded by the LMS and the University of Bath
-                  <br><br><a href="https://github.com/nathanevaans/LMS-URB-Project/blob/main/Report.pdf" target="_blank">Report</a> | <a href="https://github.com/nathanevaans/LMS-URB-Project" target="_blank">Repo</a>`,
+                  <br><br><a href="Report.pdf" target="_blank">Report</a> | <a href="https://github.com/nathanevaans/LMS-URB-Project" target="_blank">Repo</a>`,
             link: null,
             tags: ["Maths", "Research"],
             date: 2025
