--- a/index.html
+++ b/index.html
@@ -187,6 +187,14 @@
 <script>
     [
         {
+            title: "Markov Chain Particle Simulator",
+            wip: true,
+            description: "Create a graph and watch particles transition between states. Compare the current distribution of particles at states with the stationary distrbution",
+            link: "https://nathanevaans.github.io/Markov-Chain-Simulation/",
+            tags: ["Maths", "Visualisation"],
+            date: 2025
+        },
+        {
             title: "Structured Noise to Reduce Deep BSDE Training Loss",
             wip: false,
             description: `Research project focusing on reducing training loss for the Deep BSDE method under supervision of <a href="https://people.bath.ac.uk/jmf68/" target="_blank">Dr James Foster</a>, jointly funded by the LMS and the University of Bath
