--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
 
 <script>
     [
+         {
+            title: "2x2 Matrix Transformation Visualiser",
+            wip: true,
+            description: "Build intuition on how matrices map points in the plane",
+            link: "https://nathanevaans.github.io/2x2-matrix-visualisation/",
+            tags: ["Maths", "Visualisation"],
+            date: 2025
+        },
         {
             title: "Markov Chain Particle Simulator",
             wip: true,
