--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
          {
             title: "2x2 Matrix Transformation Visualiser",
             wip: true,
-            description: "Build intuition on how matrices map points in the plane",
+            description: "Made to help my A-Level students build intuition on how matrices map points in the plane",
             link: "https://nathanevaans.github.io/2x2-matrix-visualisation/",
             tags: ["Maths", "Visualisation"],
             date: 2025
