--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             </p>
             <br>
             <p>
-                <a href="www.linkedin.com/in/nathanevaans" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/nathanevaans" target="_blank">LinkedIn</a>
             </p>
 
         </div>
