--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 analysis, probability, numerical methods, and machine learning. During my studies, I completed
                 internships at <b>BlackRock</b> and <b>Dojo</b>, gaining experience across finance, software engineering,
                 and machine learning. Additionally, I was awarded the <b>LMS Undergraduate Research Bursary</b> for a
-                project on the Deep BSDE method, funded jointly by the LMS and the University of Bath.
+                project on the Deep BSDE method.
             </p>
             <br>
             <p>
