--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         <div class="nav-links">
             <a href="#" class="nav-link active" data-filter="all">All Projects</a>
             <a href="#" class="nav-link" data-filter="Research">Research</a>
-            <a href="#" class="nav-link" data-filter="Visualisation">Visualizations</a>
+            <a href="#" class="nav-link" data-filter="Visualisation">Visualisations</a>
             <a href="#" class="nav-link" data-filter="AI">AI</a>
             <a href="#" class="nav-link" data-filter="Game">Games</a>
         </div>
