--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
             wip: false,
             description: "Click and drag to add points, right click and drag to query the tree",
             link: "https://nathanevaans.github.io/quadtree/",
-            tags: ["Data Structures"],
+            tags: ["Data Structures", "Visualisation"],
             date: 2022
         },
         {
