--- a/index.html
+++ b/index.html
@@ -411,6 +411,15 @@
 <script>
     const projects = [
         {
+            title: "A Note on Integration of Banach-Valued Functions and Applications to Parabolic PDEs",
+            wip: true,
+            description: `An expository paper covering the rigorous ground work to define and work with Bochner integrals. Building up to the Fundametal Theorem of Calculus for W^{1, p}(0, T; X).
+                    <br><br><a href="Bochner_Integral_Guide.pdf" target="_blank">Report</a>`,
+            link: null,
+            tags: ["Maths", "Research"],
+            date: 2025
+        },
+        {
             title: "2x2 Matrix Transformation Visualiser",
             wip: true,
             description: "Made to help my A-Level students build intuition on how matrices map points in the plane",
