--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         },
         {
             title: "2x2 Matrix Transformation Visualiser",
-            wip: true,
+            wip: false,
             description: "Made to help my A-Level students build intuition on how matrices map points in the plane",
             link: "https://nathanevaans.github.io/2x2-matrix-visualisation/",
             tags: ["Maths", "Visualisation"],
@@ -448,7 +448,7 @@
         },
         {
             title: "Markov Chain Particle Simulator",
-            wip: true,
+            wip: false,
             description: "Create a graph and watch particles transition between states. Compare the current distribution of particles at states with the stationary distrbution",
             link: "https://nathanevaans.github.io/Markov-Chain-Simulation/",
             tags: ["Maths", "Visualisation"],
