--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             title: "A Note on Integration of Banach-Valued Functions and Applications to Parabolic PDEs",
             wip: true,
             description: `An expository paper covering the rigorous ground work to define and work with Bochner integrals. Building up to the Fundametal Theorem of Calculus for elements of $W^{1, p}(0, T; X)$.
-                    <br><br><a href="Bochner_Integral_Guide.pdf" target="_blank">Paper</a>`,
+                    <br><br><a href="A Note on Integration of Banach-Valued Functions.pdf" target="_blank">Paper</a>`,
             link: null,
             tags: ["Maths", "Research"],
             date: 2025
