--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@
         {
             title: "A Note on Integration of Banach-Valued Functions and Applications to Parabolic PDEs",
             wip: true,
-            description: `An expository paper covering the rigorous ground work to define and work with Bochner integrals. Building up to the Fundametal Theorem of Calculus for elements of $W^{1, p}(0, T; X)$.
-                    <br><br><a href="A Note on Integration of Banach-Valued Functions.pdf" target="_blank">Paper</a>`,
+            description: `An exposition covering the rigorous ground work to define and work with Bochner integrals. Building up to the Fundametal Theorem of Calculus for elements of $W^{1, p}(0, T; X)$.
+                    <br><br><a href="A Note on Integration of Banach-Valued Functions.pdf" target="_blank">Article</a>`,
             link: null,
             tags: ["Maths", "Research"],
             date: 2025
