--- a/index.html
+++ b/index.html
@@ -428,7 +428,16 @@
 </div>
 
 <script>
+    
     const projects = [
+        {
+            title: "Visualisation of an SDE in $\mathbb{R}^2$ with Non-Equilibrium Steady State",
+            wip: false,
+            description: `Simulation of an OU process showing convergence to steady state where there are non-zero currents. I also discuss rate of convergence to the steady state and develop a notion for the expected time to be $\varepsilon$ close to the steady state.`,
+            link: "https://nathanevaans.github.io/non-equilibrium-steady-state/",
+            tags: ["Exposition". "Maths", "Visualisation"],
+            date: 2025
+        },
         {
             title: "A Note on Integration of Banach-Valued Functions and Applications to Parabolic PDEs",
             wip: true,
