--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             wip: false,
             description: `Simulation of an OU process showing convergence to steady state where there are non-zero currents. I also discuss rate of convergence to the steady state and develop a notion for the expected time to be $\varepsilon$ close to the steady state.`,
             link: "https://nathanevaans.github.io/non-equilibrium-steady-state/",
-            tags: ["Exposition". "Maths", "Visualisation"],
+            tags: ["Exposition", "Maths", "Visualisation"],
             date: 2025
         },
         {
