--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
     
     const projects = [
         {
-            title: "Visualisation of an SDE in $\mathbb{R}^2$ with Non-Equilibrium Steady State",
+            title: "Visualisation of an SDE in $\\mathbb{R}^2$ with Non-Equilibrium Steady State",
             wip: false,
-            description: `Simulation of an OU process showing convergence to steady state where there are non-zero currents. I also discuss rate of convergence to the steady state and develop a notion for the expected time to be $\varepsilon$ close to the steady state.`,
+            description: `Simulation of an OU process showing convergence to steady state where there are non-zero currents. I also discuss rate of convergence to the steady state and develop a notion for the expected time to be $\\varepsilon$ close to the steady state.`,
             link: "https://nathanevaans.github.io/non-equilibrium-steady-state/",
             tags: ["Exposition", "Maths", "Visualisation"],
             date: 2025
