--- a/index.html
+++ b/index.html
@@ -428,8 +428,16 @@
 </div>
 
 <script>
-    
+   
     const projects = [
+        {
+            title: "Evans PDEs Chapter 7 Solutions",
+            wip: true,
+            description: `Solutions to questions on linear parabolic PDEs from Evans`,
+            link: "https://nathanevaans.github.io/Evans-C7-Solutions/",
+            tags: ["Maths"],
+            date: 2025
+        },
         {
             title: "Visualisation of an SDE in $\\mathbb{R}^2$ with Non-Equilibrium Steady State",
             wip: false,
