--- a/index.html
+++ b/index.html
@@ -431,6 +431,14 @@
    
     const projects = [
         {
+            title: "Lévy Area and Brownian Bridges",
+            wip: true,
+            description: 'An introduction to Lévy area and the Brownian bridge process. We derive the standard Milstein simulation scheme and demonstrate how the inclusion of off-diagonal Lévy area terms enhances strong convergence, with a discussion of how these terms can be sampled in practice.',
+            link: null",
+            tags: ["Exposition", "Maths"],
+            date: 2025
+        },
+        {
             title: "Evans PDEs Chapter 7 Solutions",
             wip: true,
             description: `Solutions to questions on linear parabolic PDEs from Evans`,
