--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
             title: "Lévy Area and Brownian Bridges",
             wip: true,
             description: 'An introduction to Lévy area and the Brownian bridge process. We derive the standard Milstein simulation scheme and demonstrate how the inclusion of off-diagonal Lévy area terms enhances strong convergence, with a discussion of how these terms can be sampled in practice.',
-            link: null",
+            link: null,
             tags: ["Exposition", "Maths"],
             date: 2025
         },
