--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         },
         {
             title: "Evans PDEs Chapter 7 Solutions",
-            wip: true,
+            wip: false,
             description: `Solutions to questions on linear parabolic PDEs from Evans`,
             link: "https://nathanevaans.github.io/Evans-C7-Solutions/",
             tags: ["Maths"],
