--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
    
     const projects = [
         {
-            title: "Lévy Area and Brownian Bridges",
+            title: "Simulating SDE Solutions: Lévy Area, Brownian Bridges and Rough Paths",
             wip: true,
-            description: 'An introduction to Lévy area and the Brownian bridge process. We derive the standard Milstein simulation scheme and demonstrate how the inclusion of off-diagonal Lévy area terms enhances strong convergence, with a discussion of how these terms can be sampled in practice.',
+            description: 'An introduction to Lévy area and the Brownian bridge process. We derive the standard Milstein simulation scheme and demonstrate how the inclusion of off-diagonal Lévy area terms enhances strong convergence, with a discussion of how these terms can be sampled in practice and a link to rough path theory.',
             link: null,
             tags: ["Exposition", "Maths"],
             date: 2025
