--- a/index.html
+++ b/index.html
@@ -433,7 +433,8 @@
         {
             title: "Simulating SDE Solutions: Lévy Area, Brownian Bridges and Rough Paths",
             wip: true,
-            description: 'An introduction to Lévy area and the Brownian bridge process. We derive the standard Milstein simulation scheme and demonstrate how the inclusion of off-diagonal Lévy area terms enhances strong convergence, with a discussion of how these terms can be sampled in practice and a link to rough path theory.',
+            description: `An introduction to Lévy area and the Brownian bridge process. We derive the standard Milstein simulation scheme and demonstrate how the inclusion of off-diagonal Lévy area terms enhances strong convergence, with a discussion of how these terms can be sampled in practice and a link to rough path theory.
+                            <br><br><a href="" target="_blank">Article</a>`,
             link: null,
             tags: ["Exposition", "Maths"],
             date: 2025
