--- a/index.html
+++ b/index.html
@@ -428,8 +428,19 @@
 </div>
 
 <script>
+    
    
     const projects = [
+        {
+            title: "Rough Paths Exercises",
+            wip: false,
+            description: `Solutions to exercises from the 2024 course 'Rough Paths and Applications to
+Machine Learning' written by Thomas Cass and Cristopher Salvi.
+                            <br><br><a href="https://arxiv.org/pdf/2404.06583" target="_blank">Lecture Notes</a>`,
+            link: null,
+            tags: ["Maths"],
+            date: 2025
+        },
         {
             title: "Simulating SDE Solutions: Lévy Area, Brownian Bridges and Rough Paths",
             wip: true,
